minhas_policiesss/support/floodgate-allow-log-shipper-logging-to-support-portal.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: floodgate-allow-log-shipper-logging-to-support-portal
  namespace: support
  labels:
    managed-by: floodgate
    floodgate-policy-type: allow
    source-workload: log-shipper
    source-namespace: logging
    target-service: support-portal
    target-port: '8080'
spec:
  podSelector:
    matchLabels:
      app: support-portal
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: logging
          podSelector:
            matchLabels:
              app: log-shipper
      ports:
        - port: 8080
          protocol: TCP
