minhas_policiesss/support/floodgate-ns-deny-ingress-support.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: floodgate-ns-deny-ingress-support
  namespace: support
  labels:
    managed-by: floodgate
    floodgate-policy-type: restrict-ingress
    source-workload: ''
    source-namespace: ''
    target-service: ''
    target-port: '0'
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress: []
